K8S-CWP/deployment.yaml
apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: example-app
  spec:
    selector:
      matchLabels:
        app: example-app
    replicas: 2
    template:
      metadata:
        labels:
          app: example-app
      spec:
        containers:
        - name: example-app-container
          image: registry.example.org/example-app
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "10Gi"
              cpu: "2"
              
          volumeMounts:
          # mount your log-file volume
          - name: my-app-logs
            mountPath: "/app/logs"

          - name: conf-sec
            mountPath: "/app/example-conf"
            readOnly: true

          ports:
          - name: https
            protocol: TCP
            containerPort: 8888
