K8S-CWP/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app
  labels:
    app: example-app-service   
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    app: example-app
