K8S-CWP/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
    # kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: example-app-certs  
    - hosts:
      - testprime.documentation.in
      - test.documentation.in
  rules:
  - http:
      paths:
      - path: /example-app
        pathType: Prefix
        backend:
          serviceName: test
          servicePort: 80
